fix: update website title and favicon to Common's branding assets

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="./public/meta/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <title>Aragon DAO</title>
+    <title>Commons DAO</title>
   </head>
   <body>
     <noscript>
